@@ -1,4 +1,4 @@
-/* $Id: keybind.c,v 1.9 2002/12/13 03:02:03 ukai Exp $ */
+/* $Id: keybind.c,v 1.10 2006/05/29 12:17:25 inu Exp $ */
 #include "funcname2.h"
 
 unsigned char GlobalKeymap[128] = {
@@ -99,7 +99,7 @@ unsigned char EscBKeymap[128] = {
     /*  P       Q       R       S       T       U       V       W        */
     nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd,
     /*  X       Y       Z       [       \       ]       ^       _        */
-    nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd,
+    nulcmd, nulcmd, prevA, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd,
     /*  `       a       b       c       d       e       f       g        */
     nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd,
     /*  h       i       j       k       l       m       n       o        */
