@@ -1,4 +1,4 @@
-/* $Id: keybind_lynx.c,v 1.7 2002/12/13 03:02:03 ukai Exp $ */
+/* $Id: keybind_lynx.c,v 1.8 2006/05/29 12:17:25 inu Exp $ */
 /* 
  * Lynx-like key binding.
  *
@@ -107,7 +107,7 @@ unsigned char EscBKeymap[128] = {
     /*  P       Q       R       S       T       U       V       W        */
     nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd,
     /*  X       Y       Z       [       \       ]       ^       _        */
-    nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd,
+    nulcmd, nulcmd, prevA, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd,
     /*  `       a       b       c       d       e       f       g        */
     nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd, nulcmd,
     /*  h       i       j       k       l       m       n       o        */
